--- a/backend/package.json
+++ b/backend/package.json
@@ -43,6 +43,7 @@
     "firebase-admin": "^11.10.1",
     "multer": "^1.4.5-lts.1",
     "sharp": "^0.32.1",
+    "uuid": "^9.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
@@ -58,6 +59,7 @@
     "@types/passport-jwt": "^3.0.9",
     "@types/bcrypt": "^5.0.0",
     "@types/multer": "^1.4.7",
+    "@types/uuid": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.42.0",
